--- a/bai11-gridview/app/src/main/res/layout/activity_main.xml
+++ b/bai11-gridview/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <GridView
+        android:id="@+id/gvPhim"
+        android:numColumns="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
