--- a/bai14-intent/app/src/main/res/layout/activity_main.xml
+++ b/bai14-intent/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,14 @@
         android:background="#673AB7"
         android:text="Goto màn hình 2"
         android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/btnGo2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="#673AB7"
+        android:text="Goto Tuhoc.cc"
+        android:textColor="@color/white" />
 </LinearLayout>
