--- a/bai14-intent/app/src/main/res/layout/activity_manhinh2.xml
+++ b/bai14-intent/app/src/main/res/layout/activity_manhinh2.xml
@@ -18,4 +18,23 @@
         android:textColor="#20f"
         android:textSize="25dp"
          />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="#673AB7"
+        android:text="Bấm để quay lại"
+        android:textColor="@color/white" />
+
+    <EditText
+        android:id="@+id/edtGetIntent"
+        android:layout_width="match_parent"
+        android:layout_height="255dp"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine" />
 </LinearLayout>
