--- a/bai15-vongdoiactivity/app/src/main/res/layout/activity_main.xml
+++ b/bai15-vongdoiactivity/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btnGo"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:text="Go to màn hình 2" />
+
+    <Button
+        android:id="@+id/btnGo3"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:text="Go to màn hình 3" />
 </LinearLayout>
