--- a/bai16-1-recyclerview/app/src/main/res/layout/layout_item.xml
+++ b/bai16-1-recyclerview/app/src/main/res/layout/layout_item.xml
@@ -1,11 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="35dp"
+            android:layout_marginTop="5dp"
+            >
+
+            <ImageView
+                android:id="@+id/imgPhim"
+                android:layout_width="199dp"
+                android:layout_height="264dp"
+                android:src="@drawable/hoanhon" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtTenPhim"
+            android:textSize="20sp"
+            android:textColor="#20f"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tên Phim" />
+
+        <TextView
+            android:id="@+id/txtMieuTa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Miêu Tả" />
+    </LinearLayout>
 </LinearLayout>
