--- a/bai17-fragment/app/src/main/res/layout/activity_main.xml
+++ b/bai17-fragment/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:id="@+id/fl1"
         android:layout_width="409dp"
         android:layout_height="681dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
