--- a/bai18-tablayout-viewpaper2/app/src/main/res/layout/actitvity_main.xml
+++ b/bai18-tablayout-viewpaper2/app/src/main/res/layout/actitvity_main.xml
@@ -4,4 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabDemo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pagerTest"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
