--- a/bai18-tablayout-viewpaper2/app/src/main/res/layout/actitvity_main.xml
+++ b/bai18-tablayout-viewpaper2/app/src/main/res/layout/actitvity_main.xml
@@ -7,7 +7,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabDemo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     </com.google.android.material.tabs.TabLayout>
 
