--- a/bai18-tablayout-viewpaper2/app/src/main/res/layout/fragment_fragment1.xml
+++ b/bai18-tablayout-viewpaper2/app/src/main/res/layout/fragment_fragment1.xml
@@ -7,7 +7,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="center"
+        android:adjustViewBounds="true"
         android:src="@drawable/anh1" />
 </FrameLayout>
