--- a/bai23-kotlin-firebase/app/src/main/res/layout/activity_insertion.xml
+++ b/bai23-kotlin-firebase/app/src/main/res/layout/activity_insertion.xml
@@ -51,7 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:background="#673AB7"
         android:text="Save Data"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtEmpSalary" />
