--- a/bai23-kotlin-firebase/app/src/main/res/layout/activity_fetching.xml
+++ b/bai23-kotlin-firebase/app/src/main/res/layout/activity_fetching.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/white"
+    android:orientation="vertical"
+    tools:context=".FetchingActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEmp"
