--- a/bai23-kotlin-firebase/app/src/main/res/layout/update_dialog.xml
+++ b/bai23-kotlin-firebase/app/src/main/res/layout/update_dialog.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/teal_200"
     android:padding="10dp">
 
     <EditText
@@ -36,5 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Update Data" />
+        android:background="#673AB7"
+        android:text="Update Data"
+        android:textColor="@color/white" />
 </LinearLayout>
